# opencv_swig

./: CMakeLists.txt  README.md  main.cpp  runme.rb  test_function.cpp  test_function.hpp  test_function.i
